# XinYi

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  RULEBOOK-zh-CN.md  RULEBOOK.md  ReadMe-cn.md  ReadMe.md  XY.emmx  build.bat  build.sh  emojis.md  platform.drawio  xy_code_style.md  xy_config.h
FAQs/: RT-Thread Nano与完整版有何区别.md
components/: xy.h  xy_cfg.h  xy_def.h  xy_typedef.h
components/Bank/: Boms.ods  CMakeLists.txt  Kconfig  Makefile  ReadMe.md  SoftWare_Design.md  bank.h  bank_age.h  bank_tempband.h  bardd_xx_common.h  battery.c  battery.h  battery.ods  bist.h  charger.h  charger_controller.c  cmd_list.md  (+13 more)
components/clib/xy_clib/: CMakeLists.txt  Kconfig  Makefile  xy_assert.h  xy_clib.md  xy_clib_apis.md  xy_common.c  xy_common.h  xy_config.h  xy_ctype.c  xy_ctype.h  xy_error.h  xy_helper.h  xy_list.h  xy_math.c  xy_math.h  xy_math_example.c  xy_rb.c  xy_rb.h  xy_rbl.h  xy_stdarg.h  xy_stddef.h  xy_stdio.c  xy_stdio.h  xy_stdlib.c  xy_stdlib.h  xy_string.c  xy_string.h  xy_time.h  xy_typedef.h
components/clib/xy_clib/test/: test.c
components/clib/xy_clib/test/test_xy_common/: test_xy_bcd2hex.c  test_xy_bits.c  test_xy_common.c  test_xy_dec2bcd.c  test_xy_u16_mode10.c  test_xy_u32_mod10.c  test_xy_u8_mod10.c
components/clib/xy_clib/test/test_xy_stdio/: test_xy_stdio.h
components/clib/xy_clib/test/test_xy_stdlib/: test_xy_stdlib.h
components/clib/xy_clib/test/test_xy_string/: test_xy_string.c
components/crypto/: CMakeLists.txt  Kconfig  Makefile  ReadMe.md  build.bat  example.c  xy_tiny_boot_crypto copy.md  xy_tiny_boot_crypto.md
components/crypto/curve25519-cortexm0-20150813/stm32f0xx/: stm32f0_linker.ld  stm32f0xx.h  stm32f0xx_conf.h  stm32f0xx_gpio.c  stm32f0xx_rcc.c  stm32f0xx_usart.c  system_stm32f0xx.c
components/crypto/curve25519-cortexm0-20150813/test/: speed.c
components/crypto/inc/: xy_crypto_config.h  xy_hal_crypto.h  xy_tiny_crypto.h
components/crypto/test/: test_crypto.c
components/crypto/xy_25519/: Makefile  README.md  README_M0.md  README_RISCV.md  fe25519_m0.c  fe25519_m0.h  test_xy_25519_m0.c  xy_25519.c  xy_25519.h  xy_25519_m0.c
components/crypto/xy_25519/asm/: ASSEMBLY_COMPARISON.txt  cortex_m0_mpy121666.s  cortex_m0_mul256.s  cortex_m0_reduce.s  cortex_m0_square.s
components/crypto/xy_aes/: xy_aes.c
components/crypto/xy_base/: xy_base64.c
components/crypto/xy_blake/: Makefile  xy_blake2.c  xy_blake2.h
components/crypto/xy_chacha/: Makefile  README.md  xy_chacha20_poly1305.c  xy_chacha20_poly1305.h
components/crypto/xy_crc/: xy_crc.c  xy_crc.h  xy_crc_cfg.h
components/crypto/xy_hex/: xy_hex.c
components/crypto/xy_hmac/: xy_hmac.c  xy_sha256.c
components/crypto/xy_md/: xy_md5.c
components/crypto/xy_rng/: xy_csprng.c  xy_random.c  xy_rng.h
components/dm/: CMakeLists.txt  Kconfig  Makefile  xt_f2e_2.c  xy_f2e.c  xy_f2e_1.c  xy_f2e_3.c  xy_fe.h
components/dm/EEPROM/: eeeprom.c  eeeprom_port.h
components/dm/norflash/: norflash.c  norflash.h
components/dm/xy_base64/: xy_base64.c  xy_base64.h
components/dm/xy_eeprom/: Makefile  eflash.h
components/dm/xy_eflash_v1/: eep.c  eep.h  eep_cfg.h  eep_def.h  eep_port.h  output.csv
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/driver/inc/: flash.h
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/driver/src/: flash.c
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/example/EWARM/: HC32L19X.ewd  HC32L19X.ewp  HC32L19X.eww  hc32l19x.svd  startup_hc32l19x.s
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/example/MDK/: HC32L19X.uvguix.EugeneChan  HC32L19X.uvoptx  HC32L19X.uvprojx  hc32l19x.sfr  startup_hc32l19x.s
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/example/MDK/RTE/_HC32L19X_Release/: RTE_Components.h
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/example/MDK/output/release/: HC32L19X.axf  HC32L19X.build_log.htm  HC32L19X.hex  HC32L19X.lnp  HC32L19X.map  HC32L19X_HC32L19X_Release.dep  ddl.crf  ddl.d  eep.crf  eep.d  eep_hc32lxx.crf  eep_hc32lxx.d  flash.crf  flash.d  interrupts_hc32l19x.crf  interrupts_hc32l19x.d  main.crf  main.d  sysctrl.crf  sysctrl.d  system_hc32l19x.crf  system_hc32l19x.d  uart.crf  uart.d  xy_ctype.crf  xy_ctype.d  xy_delay.d  xy_stdio.crf  xy_stdio.d  xy_string.crf  xy_string.d
components/dm/xy_eflash_v1/examples/HC32L19x_Template_Rev1.1.0/example/source/: main-uart.c  main.c
components/dm/xy_eflash_v1/mcu/: eep_hc32lxx.c
components/dm/xy_eflash_v2/: ReadMe.md  eeeprom.h  eeeprom32_def.h  eeeprom_cfg.h  eeeprom_def.h  eeeprom_helper.h
components/dm/xy_flash/sd/: ReadMe.md  SD_Format.xlsx  sd.c  sd.h  sd_spi.c  sd_spi.h
components/dm/xy_mem/: xy_mem.c  xy_mem.h
components/dm/xy_norflash/: xy_nor_port.c
components/dm/xy_nvm/: sf_flash.c  sf_kv.c  sf_kv.cc  sf_kv.h  sf_kv.hh
components/dm/xy_rblk/: ReadMe.md
components/dm/xy_tlv/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  README_CN.md  example.c  xy_tlv.c  xy_tlv.h
components/hal/stm32/: CMakeLists.txt  Makefile.template  README.md  example_usage.c  stm32_hal.h
components/hal/stm32/stm32f4/: xy_hal_dma.c  xy_hal_i2c.c  xy_hal_lp_timer.c  xy_hal_pin.c  xy_hal_pwm.c  xy_hal_rtc.c  xy_hal_spi.c  xy_hal_timer.c  xy_hal_uart.c
components/kernel/ipc/: CMakeLists.txt
components/kernel/ipc/completion/: xy_conpletion.h
components/kernel/ipc/xy_broker/: Makefile  QUICK_REFERENCE.md  README.md  xy_broker.c  xy_broker.h
components/net/xy_iso7816/: CMakeLists.txt  Makefile  QUICK_REFERENCE.md  README.md  xy_iso7816.c  xy_iso7816.h  xy_iso7816_cfg.h  xy_iso7816_example.c  xy_iso7816_test.c
components/time_tick/: CMakeLists.txt  Kconfig  Makefile
components/time_tick/xy_alarm/: xy_alarm.c
components/time_tick/xy_tick/: xy_tick.c  xy_tick.h
components/time_tick/xy_timer/: xy_timer.c  xy_timer.h
components/xy_code_style/: .clang-format  CMakeLists.txt  Kconfig  Makefile  doxygen.txt  xy_code_style.c  xy_code_style.h  xy_code_style.md
docs/: Software Design and Requirements.md  crc.md  repo_guide.md  rtc.md  嵌入式产品日志设计.md
(+355 files in other folders)
